# HQEC

./: .gitignore  LICENSE.md  README.md  decoding.py  generate.py  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: tests.yaml
DIstanceFind/: DistanceFInder.py  InputProcessor.py  main.py  test.py
Examples/Calculating_Code_Distance/HaPPY/: HaPPY_Distance.py
Examples/Distance_Calculation/HaPPY/: HaPPY_Distance.py
Examples/Erasure_Decoding/HaPPY/: HaPPY_Erasure.py
Examples/Operator_Pushing/HaPPY/: ZERO_Rate_HaPPY.py
Examples/Tensor_Network_Decoding/HaPPY/: HaPPY_TN.py
LEGO_HQEC/DIstanceFind/: OperatorProcessor.py
LEGO_HQEC/OperatorPush/: NetworkToolbox.py  PushingToolbox.py  TensorToolbox.py
LEGO_HQEC/OperatorPush/HypertilingCompatibility/: SRG_to_HTN.py
LEGO_HQEC/OperatorPush/Presets/: HTN_vertex_inflation.py  HaPPY_code.py  Holographic_ReedMuller.py  Holographic_Steane_code.py  SCF.py  SixOneThree.py  happy_plus_RM.py  happy_plus_steane.py  sevenonethree.py  steane_plus_RM.py
LEGO_HQEC/QuDec/: ErasureDecoder.py  Mod2Algebra.py  OperatorProcessor.py  OutputProcessor.py  PauliDecoder.py  TN_decoder.py
OperatorPush/: OperatorToolbox.py  PushingToolbox.py  TensorToolbox.py
OperatorPush/HypertilingCompatibility/: SRG_to_HTN.py
OperatorPush/Presets/: HTN.py  HTN_vertex_inflation.py  HaPPY.py  Heptagon_Steane_Code.py  SCF.py  SixOneThree.py  XZZXF.py  Zero_Rate_HaPPY.py  happy_plus_RM.py  happy_plus_scf.py  happy_plus_steane.py  qRM.py  sevenonethree.py  steane_plus_RM.py
QuDec/: ErasureDecoder.py  InputProcessor.py  Mod2Algebra.py  OperatorProcessor.py  PauliDecoder.py  TN_decoder.py
examples/operator_push/happy/: zero_rate_happy.py
hqec/: input_processor.py  operator_processor.py  output_processor.py
hqec/decoder/: decoder_erasure.py  decoder_pauli.py  decoder_tensor_network.py  mod2_algebra.py  pauli.py  test_decoder_pauli_with_happy_zero_r_3.py  test_decoder_pauli_with_htn_vertex_res_l_5.py
hqec/operator_push/: export_toolbox.py  network_toolbox.py  operator_toolbox.py  push_toolbox.py  tensor_toolbox.py
test/decoder/: test_decoder_pauli.py
(+17 files in other folders)
